# confidential-cdp

./: README.md
cdp/app/: package-lock.json  package.json
cdp/app/scripts/: deploy_service.js
cdp/app/test/: service.spec.ts
cdp/service/: Cargo.toml
cdp/service/src/: main.rs
erc20/app/: package-lock.json  package.json
erc20/app/scripts/: deploy_service.js
erc20/app/test/: service.spec.ts
erc20/service/src/: main.rs
