[package]
name = "cdp"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
failure = "0.1"
map_vec = "0.2.6"
oasis-std = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
oasis-test = "0.2"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[package.metadata.oasis.cdp.dependencies]
erc20 = { path = "../../erc20/service/target/wasm32-wasi/release/erc20.wasm" }
#erc20 = { path = "../../erc20/service/target/service/erc20.wasm" }
